--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,6 +2,8 @@
     "compilerOptions": {
         "target": "esnext",
         "module": "commonjs",
+        "types": ["element-plus/global"],
+        "lib": ["ESNext", "DOM"],
         "allowSyntheticDefaultImports": true,
         "baseUrl": "./",
         "paths": {
@@ -13,6 +15,6 @@
         }
     },
     "exclude": [
-        "node_modules","images","src-tauri"
+        "node_modules","images","src-tauri", "dist"
     ]
 }
