--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,7 +2,7 @@
     "compilerOptions": {
         "target": "esnext",
         "module": "commonjs",
-        "types": ["element-plus/global"],
+        "types": ["element-plus/global", ],
         "lib": ["ESNext", "DOM"],
         "allowSyntheticDefaultImports": true,
         "baseUrl": "./",
