--- a/package.json
+++ b/package.json
@@ -17,10 +17,14 @@
     "vue-router": "4"
   },
   "devDependencies": {
+    "@iconify-json/carbon": "^1.1.21",
+    "@iconify-json/ic": "^1.1.14",
+    "@iconify-json/mingcute": "^1.1.9",
     "@tauri-apps/cli": "^1.4.0",
     "@types/node": "^20.6.0",
     "@vitejs/plugin-vue": "^4.2.3",
     "unplugin-auto-import": "^0.16.6",
+    "unplugin-icons": "^0.17.0",
     "unplugin-vue-components": "^0.25.2",
     "vite": "^4.4.4",
     "vite-plugin-windicss": "^1.9.1",
