--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "vue-router": "4"
   },
   "devDependencies": {
+    "@iconify-json/ant-design": "^1.1.10",
     "@iconify-json/carbon": "^1.1.21",
     "@iconify-json/ic": "^1.1.14",
+    "@iconify-json/icon-park": "^1.1.12",
     "@iconify-json/mingcute": "^1.1.9",
     "@tauri-apps/cli": "^1.4.0",
     "@types/node": "^20.6.0",
