--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -13,7 +13,7 @@ edition = "2021"
 tauri-build = { version = "1.4", features = [] }
 
 [dependencies]
-tauri = { version = "1.4", features = [ "window-unmaximize", "window-create", "window-minimize", "window-maximize", "window-set-min-size", "window-set-max-size", "macos-private-api", "global-shortcut-all", "window-close", "system-tray", "shell-open"] }
+tauri = { version = "1.4", features = [ "window-unmaximize", "window-show", "window-start-dragging", "window-unminimize", "window-hide", "window-center", "window-create", "window-minimize", "window-maximize", "window-set-min-size", "window-set-max-size", "macos-private-api", "global-shortcut-all", "window-close", "system-tray", "shell-open"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 
